[gd_scene load_steps=16 format=2]

[ext_resource path="res://World/GrassBackground.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Goblin.png" type="Texture" id=3]
[ext_resource path="res://CombatArena/CombatArena.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://CombatArena/Goblin.gd" type="Script" id=6]
[ext_resource path="res://CombatArena/Player.gd" type="Script" id=7]
[ext_resource path="res://World2/SandBackground.png" type="Texture" id=8]
[ext_resource path="res://World3/IceBackground.png" type="Texture" id=9]
[ext_resource path="res://Music and Sounds/videoplayback.mp3" type="AudioStream" id=10]
[ext_resource path="res://Music and Sounds/world 2 fight.mp3" type="AudioStream" id=11]
[ext_resource path="res://Music and Sounds/world 1 fight.mp3" type="AudioStream" id=12]
[ext_resource path="res://Music and Sounds/world 3 fight.mp3" type="AudioStream" id=13]
[ext_resource path="res://World4/Nuevo proyecto.png" type="Texture" id=14]
[ext_resource path="res://Audio/Sword hit.wav" type="AudioStream" id=16]

[node name="CombatArena" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background1" type="TextureRect" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="Sprite" parent="."]
visible = false
position = Vector2( 239.715, 43.3119 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( -414.377, -214.689, 1437.51, 758.874 )

[node name="Background3" type="Sprite" parent="."]
visible = false
position = Vector2( 407.844, 104.531 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( -273.377, -308.625, 2121.13, 1013.93 )

[node name="Background4" type="Sprite" parent="."]
visible = false
position = Vector2( 100.478, 200.424 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( -1998.66, -3235.08, 2959.79, 3675.7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 126.145
margin_top = 101.225
margin_right = 189.145
margin_bottom = 169.225
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.00392157, 1, 0, 1 )
margin_right = 63.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Items"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="YSort" type="YSort" parent="."]

[node name="Player" type="Sprite" parent="YSort"]
position = Vector2( 269.54, 59.3962 )
scale = Vector2( 2.97308, 2.97308 )
texture = ExtResource( 2 )
hframes = 60
frame = 12
script = ExtResource( 7 )

[node name="LabelPlayer" type="Label" parent="YSort/Player"]
margin_left = -14.4337
margin_top = 16.9748
margin_right = 11.5663
margin_bottom = 30.9748
rect_rotation = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" parent="YSort/Player" instance=ExtResource( 5 )]
choice = 1

[node name="Hit" type="AudioStreamPlayer" parent="YSort/Player"]
stream = ExtResource( 16 )

[node name="Goblin" type="Sprite" parent="YSort"]
position = Vector2( 52.8958, 56.3093 )
rotation = 3.14159
scale = Vector2( 3.21165, -3.21165 )
texture = ExtResource( 3 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="YSort/Goblin"]
margin_left = 7.61021
margin_top = 14.1263
margin_right = 33.6102
margin_bottom = 28.1263
rect_scale = Vector2( -1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" parent="YSort/Goblin" instance=ExtResource( 5 )]

[node name="Music" type="Node2D" parent="."]

[node name="World1" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 12 )

[node name="World2" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 11 )

[node name="World3" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 13 )

[node name="World4" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 10 )

[connection signal="pressed" from="VBoxContainer/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AttackButton" to="YSort/Player" method="_on_AttackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AttackButton" to="YSort/Goblin" method="_on_AttackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ItemsButton" to="." method="_on_ItemsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="no_health" from="YSort/Player/Stats" to="." method="_on_Stats_no_health"]
[connection signal="no_health" from="YSort/Player/Stats" to="YSort/Player" method="_on_Stats_no_health"]
[connection signal="no_health" from="YSort/Goblin/Stats" to="YSort/Goblin" method="_on_Stats_no_health"]
